# iam-policy-analyzer

./: CONTRIBUTING.md  Dockerfile  GITHUB_LAUNCH_GUIDE.md  PROJECT_REFERENCE.md  QUICK_START.md  README.md  pyproject.toml  test_demo.py
examples/: bad-policy-sensitive-no-mfa.json  bad-policy-wildcards.json  good-policy-least-privilege.json
iam_policy_analyzer/: __init__.py  analyzer.py  checks.py  cli.py  models.py  security_checks.py
