[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-policy-analyzer"
version = "0.1.0"
description = "Automated security analysis tool for IAM policies across cloud providers and identity systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Amit Gupta", email = "apphelp.csw@gmail.com"}
]
keywords = ["iam", "security", "policy-analysis", "compliance", "okta", "aws", "azure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xamitgupta/iam-policy-analyzer"
Documentation = "https://github.com/xamitgupta/iam-policy-analyzer#readme"
Repository = "https://github.com/xamitgupta/iam-policy-analyzer.git"
Issues = "https://github.com/xamitgupta/iam-policy-analyzer/issues"

[project.scripts]
iam-analyzer = "iam_policy_analyzer.cli:main"

[tool.setuptools]
packages = ["iam_policy_analyzer"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
